# omnigram

./: .editorconfig  .gitignore  LICENSE  README.md  lefthook.yml  pyproject.toml
.github/scripts/: bump_version.py
.github/workflows/: bump_version.yml
omnigram/: __main__.py  handler.py  minecraft.py  validators.py
omnigram/config/: __init__.py  admin.py  config.py  database.py  minecraft.py  telegram.py
omnigram/database/: __init__.py  config.py
omnigram/factory/: __init__.py  minecraft_server.py  telegram.py  telegram_handler.py
omnigram/minecraft/: __init__.py  minecraft_server.py
omnigram/server/: app.py
omnigram/telegram/: __init__.py  telegram_handler.py  validators.py
