[project]
name = "omnigram"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.17.0",
    "apscheduler>=3.11.0",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
]

[dependency-groups]
dev = [
    "lefthook>=1.10.10",
    "flake8>=7.1.1",
    "isort>=6.0.0",
    "mypy>=1.15.0",
    "pyright>=1.1.393",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 120
